[metadata]
name= markdown-checker
version= 0.0.1
author=John Aziz
email= johnaziz269@gmail.com
description= A markdown validation reporting tool
long_description= file: README.md
url= https://github.com/john0isaac/markdown-checker
requires_python = ">=3.8"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

