[metadata]
name= markdown-checker
version= 0.0.4
author=John Aziz
email= johnaziz269@gmail.com
description= A markdown validation reporting tool
long_description= file: README.md
url= https://github.com/john0isaac/markdown-checker
requires_python = ">=3.8"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages=find: 
include_package_data = True
[options.entry_points]
console_scripts =
    markdown-checker = markdown_checker.validate_markdown:main