[metadata]
name = markdown-checker
version = 0.0.9
author = John Aziz
author_email = johnaziz269@gmail.com
maintainer = John Aziz
maintainer_email = johnaziz269@gmail.com
description= A markdown validation reporting tool
long_description= file: README.md
long_description_content_type = text/markdown
license = MIT
url= https://github.com/john0isaac/markdown-checker
requires_python = ">=3.8"
project_urls = 
    Bug Tracker = https://github.com/john0isaac/markdown-checker/issues
    Contributing = https://github.com/john0isaac/markdown-checker/pulls
    Source Code = https://github.com/john0isaac/markdown-checker
    Releases = https://github.com/john0isaac/markdown-checker/releases
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
packages=find: 
python_requires = >=3.8

[options.entry_points]
console_scripts =
    markdown-checker = markdown_checker.validate_markdown:main
